--- a/public/contact.html
+++ b/public/contact.html
@@ -1,9 +1,9 @@
 <h1>Contact Me</h1>
-<p>Tel: +91 7011296387</p>
-<p>Email: anujpilaniya2013210@gmail.com</p>
+<p>Tel: +91 701xxxx387</p>
+<p>Email: anujpilaniya20132xx@gmail.com</p>
 <p>Address:</p>
 <p>
-  508 Janta Flats, GTB Enclave<br />
+  5yy Janta Flats, GTB Enclave<br />
   New Delhi<br />
   India <br />
 </p>
